--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.0",
   "description": "Another implementation of Netease Music. 另一个利用网易音乐 API 的 Web 前端实现。",
   "main": "webpack.config.js",
-  "dependencies": {},
   "devDependencies": {
     "babel": "^6.5.2",
     "babel-loader": "^6.2.4",
+    "babel-plugin-transform-runtime": "^6.9.0",
     "babel-preset-es2015": "^6.9.0",
+    "babel-preset-stage-0": "^6.5.0",
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "gulp": "^3.9.1",
