--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,12 @@
 {
     "presets": ["es2015", "stage-0"],
     "plugins": [
-        ["transform-runtime", {
-          "polyfill": false,
-          "regenerator": true
-        }]
+        [
+            "transform-runtime",
+            {
+                "polyfill": false,
+                "regenerator": true
+            }
+        ]
      ]
 }
